Closed
Bug 1487763
Opened 5 years ago
Closed 5 years ago
[Wayland] Delay scale factor settings when we're missing wl_surface
Categories
(Core :: Widget: Gtk, defect)
Core
Widget: Gtk
Tracking
()
RESOLVED
FIXED
mozilla64
Tracking | Status | |
---|---|---|
firefox-esr60 | --- | unaffected |
firefox62 | --- | unaffected |
firefox63 | --- | fixed |
firefox64 | --- | fixed |
People
(Reporter: stransky, Assigned: stransky)
References
(Blocks 1 open bug)
Details
(Keywords: regression)
Attachments
(1 file)
46 bytes,
text/x-phabricator-request
|
jhorak
:
review+
pascalc
:
approval-mozilla-beta+
|
Details | Review |
Follow up from Bug #1484921 Recently we're missing some windows with this error: WARNING: WindowSurfaceWayland::Commit(): parent wl_surface is already hidden/deleted. When a new window is created and it's not shown/mapped yet we can't commit to such window as Wayland refuses so which results to missing popup/tooltip windows. We need to delay wl_surface_set_buffer_scale() call on such hidden surface.
Assignee | ||
Comment 1•5 years ago
|
||
We may track the wl_surface_set_buffer_scale() call request by some variable and perform that before wl_surface commit.
Assignee | ||
Comment 2•5 years ago
|
||
Comment 3•5 years ago
|
||
Comment on attachment 9006549 [details] Bug 1487763 - [Wayland] Set scale factor settings before wl_surface commit, r=jhorak Jan Horak [:jhorak] has approved the revision.
Attachment #9006549 -
Flags: review+
Assignee | ||
Updated•5 years ago
|
Keywords: checkin-needed
Pushed by ebalazs@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/8cad6594aeb9 [Wayland] Set scale factor settings before wl_surface commit, r=jhorak
Keywords: checkin-needed
Comment 5•5 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/8cad6594aeb9
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox64:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
Comment 6•5 years ago
|
||
Please request Beta approval on this when you're comfortable doing so.
Assignee | ||
Comment 7•5 years ago
|
||
Comment on attachment 9006549 [details] Bug 1487763 - [Wayland] Set scale factor settings before wl_surface commit, r=jhorak Approval Request Comment [Feature/Bug causing the regression]: Bug 1484921 [User impact if declined]: Broken wayland backend on HiDPI displays [Is this code covered by automated tests?]: no [Has the fix been verified in Nightly?]: yes [Needs manual test from QE? If yes, steps to reproduce]: no [List of other uplifts needed for the feature/fix]: none [Is the change risky?]: no [Why is the change risky/not risky?]: Distro only code, don't used by mozilla official builds. [String changes made/needed]: none
Flags: needinfo?(stransky)
Attachment #9006549 -
Flags: approval-mozilla-beta?
Comment 8•5 years ago
|
||
Comment on attachment 9006549 [details] Bug 1487763 - [Wayland] Set scale factor settings before wl_surface commit, r=jhorak Low-risk Wayland patch for Linux, approved for 63 beta 6
Attachment #9006549 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 9•5 years ago
|
||
bugherder uplift |
https://hg.mozilla.org/releases/mozilla-beta/rev/07f61c345475
You need to log in
before you can comment on or make changes to this bug.
Description
•