Bug 1487763 - [Wayland] Set scale factor settings before wl_surface commit, r=jhorak a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D5029

--HG--
extra : source : 8cad6594aeb96628e83aaac56a28f610405e2599